quick_tests/cases/pass/p22_string_print_with_variable.webx
fn main() -> i32 {
    let name: &str = "John";
    println("Hello, {}!", name);
    return 0;
}