quick_tests/cases/fail/p24_invalid_string_format.webx
fn main() -> i32 {
    let name: &str = "John";
    println("Hello, {}", name, 30);
    return 0;
}